@@ -18,7 +18,7 @@
  *	You should have received a copy of the GNU General Public License
  *	along with PsychoStats.  If not, see <http://www.gnu.org/licenses/>.
  *
- *	Version: $Id: seasons.php $
+ *	Version: $Id: owners.php $
  */
 define("PSYCHOSTATS_PAGE", true);
 define("PSYCHOSTATS_ADMIN_PAGE", true);
@@ -26,67 +26,39 @@ include("../includes/common.php");
 include("./common.php");
 
 $cms->crumb('Manage', psss_url_wrapper($_SERVER['REQUEST_URI']));
-$cms->crumb('Seasons', psss_url_wrapper($php_scnm));
+$cms->crumb('Owners', psss_url_wrapper($php_scnm));
 
-$validfields = array('ref','start','limit','order','sort','ajax','season_h');
+$validfields = array('ref','order','sort','ajax');
 $cms->theme->assign_request_vars($validfields, true);
 
-if (!is_numeric($start) or $start < 0) $start = 0;
-if (!is_numeric($limit) or $limit < 0) $limit = 50;
-if (!in_array($order, array('asc','desc'))) $order = 'desc';
-$sort = 'season_h';
+if (!in_array($order, array('asc','desc'))) $order = 'asc';
+$sort = 'team_id';
 
 $_order = array(
-	'start'	=> $start,
-	'limit'	=> $limit,
 	'order' => $order, 
 	'sort'	=> $sort
 );
 
-// get a list of seasons
-$list = array();
-$cmd = "SELECT * FROM $ps->t_seasons_h WHERE ";
-$where = "1";
-$cmd .= $where . " " . $ps->getsortorder($_order);
-$list = $ps->db->fetch_rows(1, $cmd);
+// get a list of current owners
+$owners = array();
 
-$total = $ps->db->count($ps->t_seasons_h, '*', $where);
-$pager = pagination(array(
-	'baseurl'	=> psss_url_wrapper($_order),
-	'total'		=> $total,
-	'start'		=> $start,
-	'perpage'	=> $limit, 
-	'pergroup'	=> 5,
-	'separator'	=> ' ', 
-	'force_prev_next' => true,
-	'next'		=> $cms->trans("Next"),
-	'prev'		=> $cms->trans("Previous"),
-));
+$cmd  = "SELECT team_id, owner_name, firstseen, lastseen FROM $ps->t_team_ids_names a ";
+$cmd .= "WHERE lastseen = (";
+$cmd .= "SELECT MAX(lastseen) FROM $ps->t_team_ids_names b ";
+$cmd .= "WHERE a.team_id=b.team_id AND a.owner_name != '') ";
+$cmd .= "AND firstseen = (";
+$cmd .= "SELECT MIN(firstseen) FROM $ps->t_team_ids_names c ";
+$cmd .= "WHERE a.owner_name=c.owner_name) ";
+$cmd .= $ps->getsortorder($_order);
 
-// massage the array a bit so we don't have to do the logic in the theme template
-$seasons = array();
-$first = $list ? $list[0]['season_h'] : array();
-$last  = $list ? $list[ count($list) - 1]['season_h'] : array();
-foreach ($list as $sh) {
-	$sh['season_h'] ??= null;
-	$sh['up'] ??= null;
-	$sh['down'] ??= null;
-	if ($sh['season_h'] == $first) {
-		$sh['down'] = 1;
-	} elseif ($sh['season_h'] == $last) {
-		$sh['up'] = 1;
-	} else {
-		$sh['down'] = 1;
-		$sh['up'] = 1;
-	}
-	$seasons[] = $sh;
-}
+$owners = $ps->db->fetch_rows(1, $cmd);
+
+$total = count($owners);
 
 // assign variables to the theme
 $cms->theme->assign(array(
 	'page'		=> basename(__FILE__, '.php'), 
-	'pager'		=> $pager,
-	'seasons'	=> $seasons,
+	'owners'	=> $owners,
 	'text'		=> $cms->trans("Loading ..."),
 ));
 
