@@ -15,6 +15,7 @@
 	<dt class="folder first"><#Owner Management#></dt>
 		<dd class="user-green{if $page == 'teams'} sel{/if}"><a href="teams.php"><#All Teams#></a></dd>
 		<dd class="user-red{if $page == 'users'} sel{/if}"><a href="users.php"><#All Users#></a></dd>
+		<dd class="user-gray{if $page == 'owners'} sel{/if}"><a href="owners.php"><#Current Owners#></a></dd>
 	<dt class="folder first"><#Help Management#></dt>
 		<dd class="h_entry{if $page == 'help'} sel{/if}"><a href="help.php"><#Help Entries#></a></dd>
 		<dd class="h_query{if $page == 'help_query'} sel{/if}"><a href="help_query.php"><#Help Queries#></a></dd>
