@@ -1,0 +1,61 @@
+<!--outermost page container for all content-->
+<div id="ps-page-container">
+
+<!--inner container for the content-->
+<div id="ps-main">
+{include file="crumbs.html"}
+
+<div id="ps-main-column">
+{include file="manage_menu.html"}
+</div>
+
+<!--content block-->
+<div id="ps-main-content" class="ps-page-{$page}">
+
+<div class="ps-table-frame no-ani">
+
+<div class="inline-notes">
+	<h4><#Intended purpose of this list#></h4>
+	<p>
+		<#This list of current owners in the database is intended to allow admins to add new owners as they join during the off season.#>
+		<#Just click on the team # to update the owner name.#>
+		<#This will allow new owners to register before the season starts.#>
+	</p>
+</div>
+	<div class="ps-table-inner">
+		<table id='sh-table' class='ps-table ps-owners-table'>
+		<tr class='hdr'>
+			<th class="active"><p><span class="desc"><#Team ##></span></p></th>
+			<th><p><span class="desc"><#Current Owner Name#></span></p></th>
+			<th><p><span class="desc"><#First Seen#></span></p></th>
+			<th><p><span class="desc"><#Last Seen#></span></p></th>
+		</tr>
+{foreach from=$owners item='o'}
+		<tr{cycle values=", class='even'"}>
+			<td class="item-center"><a href="{url _base='owners_edit.php' team_id=$o.team_id}">{$o.team_id|escape}</a></td>
+			<td class="item">{$o.owner_name|escape}</td>
+			<td class="item-center">{$o.firstseen|escape}</td>
+			<td class="item-center">{$o.lastseen|escape}</td>
+		</tr>
+{foreachelse}
+		<tr><td colspan="6" class="no-data">
+			<#No Data in the Database#>
+			<br>
+		</td></tr>
+{/foreach}
+
+		</table>
+	</div>
+	<div class="ps-table-footer">
+		<div class="legend">
+			<p><b><#Note#>:</b> <#The "First Seen" date  will reflect the date the stats were first updated during the season the current owner joined the league, or the date that an owner's name was manually added to the database.  It may not accurately reflect when the current owner actually joined the league.#></p>
+		</div>
+	</div>
+</div>
+
+
+</div> {* end ps-main-content *}
+</div> {* end ps-main *}
+
+	<div class="clear"></div>
+</div> {* end ps-page-container *}
