@@ -1,0 +1,59 @@
+<!--outermost page container for all content-->
+<div id="ps-page-container">
+
+<!--inner container for the content-->
+<div id="ps-main">
+
+{include file="crumbs.html"}
+
+<!--content block-->
+<div id="ps-main-content" class="ps-page-{$page}">
+
+{$message}
+
+<div class="ps-form-container" id="ps-{$page}-form">
+<div class="ps-form">
+<form method="post" action="{url}">
+<fieldset>
+<legend><#Edit Owner Name for Team ##> {$team_id}</legend>
+{if $errors.fatal}<div class="err fatal"><h4><#Fatal Error#></h4><p>{$errors.fatal}</p></div>{/if}
+
+<div>
+	<label><#Current Owner#>:</label>
+	<span class="nomodify">{$team.owner_name}</span>
+</div>
+
+<div{if $errors.owner_name} class="err"{/if}>
+	<p class="err">{$errors.owner_name|escape}</p>
+	<label><#New Owner#>:</label>
+	<input name="owner_name" value="{$form.owner_name|escape}" type="text" class="field medium">
+
+	<div id="ln-notes" class="inline-notes">
+		<h4><#A Note on New Owner Names#></h4>
+		<p>
+			<#The new owner name cannot already exist in the database and <strong><em>absolutely must match the new owner name exactly as shown on the Scoresheet league pages</em></strong>.  If the name entered is incorrect the only solution will be to edit the name in the database or reset the stats, including team profiles, and regenerate the stats.#>
+		</p>
+	</div>
+</div>
+
+</fieldset>
+<fieldset>
+<div class="submit">
+	<input name="submit" value="1" type="hidden">
+	<input name="ref" value="{$ref}" type="hidden">
+	<input name="key" value="{$form_key}" type="hidden">
+	<input name="team_id" value="{$team_id}" type="hidden">
+	<input class="btn save" type="submit" value="<#Save#>">
+	<input name="cancel" class="btn cancel" type="submit" value="<#Cancel#>">
+</div>
+</fieldset>
+</form>
+</div>
+</div>
+
+
+</div> {* end ps-main-content *}
+
+</div> {* end ps-main *}
+
+</div> {* end ps-page-container *}
