@@ -77,6 +77,7 @@ Version 0.0.4b (in progress)
 * [Improved] Season with differing number of games handled.
 * [Improved] Season length now configurable in the ACP.
 * [Improved] Table headers sticky at top of tables on roster pages when page is scrolled.
+* [Improved] Can now add new owner names in the ACP.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
